--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-image-lightbox",
-  "version": "6.0.0",
+  "name": "eris-react-image-lightbox",
+  "version": "6.0.1",
   "description": "A lightbox component for React.js",
   "scripts": {
     "build": "rollup -c",
@@ -28,10 +28,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/frontend-collective/react-image-lightbox.git"
+    "url": "https://github.com/eristemena/react-image-lightbox"
   },
-  "homepage": "https://frontend-collective.github.io/react-image-lightbox",
-  "bugs": "https://github.com/frontend-collective/react-image-lightbox/issues",
+  "homepage": "https://github.com/eristemena/react-image-lightbox",
+  "bugs": "https://github.com/eristemena/react-image-lightbox/issues",
   "authors": [
     "Chris Fritz"
   ],
